--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.mvc.contentnegotiation.favor-parameter=true
-spring.mvc.view.prefix=/WEB-INF/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.contentnegotiation.favor-parameter=true
+#spring.mvc.view.prefix=/WEB-INF/
+#spring.mvc.view.suffix=.jsp
 
 employeeNotPresentMessage=Employee with such id or name is not found
