--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@
 #spring.mvc.view.suffix=.jsp
 
 employeeNotPresentMessage=Employee with such id or name is not found
+
+#H2
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddlAuto=create-drop
+spring.jpa.showSql=true
+spring.jpa.defer-datasource-initialization=true
