Spring Data JPA / MVC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.jpa.defer-datasource-initialization=true
 #spring.jpa.showSql=true
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
+
+spring.data.web.pageable.max-page-size=20
