Validation / editPage2 / sort desc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ spring.jpa.defer-datasource-initialization=true
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 
+# Optional DB connection pool settings
+#spring.datasource.hikari.maximum-pool-size=5
+
 # Pagination settings
 spring.data.web.pageable.max-page-size=20
