--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 
 employeeNotPresentMessage=Employee with such id or name is not found
 
+server.port=8080
+
 # H2
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddlAuto=create-drop
