--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ employeeNotPresentMessage=Employee with such id or name is not found
 server.port=8080
 
 # H2
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddlAuto=create-drop
-spring.jpa.showSql=true
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddlAuto=create-drop
+#spring.jpa.showSql=true
+#spring.jpa.defer-datasource-initialization=true
 
 # Extra H2 settings
 #spring.datasource.url=jdbc:h2:mem:testdb
@@ -22,15 +22,15 @@ spring.jpa.defer-datasource-initialization=true
 #spring.h2.console.enabled=true
 
 # MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/employeeweb
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.showSql=true
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.datasource.url=jdbc:mysql://localhost:3306/employeeweb
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.showSql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=never
 
 # Optional DB connection pool settings
 #spring.datasource.hikari.maximum-pool-size=5
