--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 <!--            <artifactId>jstl</artifactId>-->
 <!--            <version>1.2</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
