Logging and DB table relation added

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,7 @@
 validation.employee.name=Put a valid name, please
+validation.employee.name.length=Max length is 20
+validation.employee.surname=Put a valid surname, please
+validation.employee.surname.length=Max length is 20
+validation.employee.age=Age cannot be under 18
+validation.employee.additionalinfo=Max length is 255
+validation.employee.email=Enter a valid email
