--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ server.port=8080
 #spring.jpa.defer-datasource-initialization=true
 
 # Extra H2 settings
+# H2 console URL: http://localhost:8080/h2-console
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
