--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddlAuto=create-drop
 spring.jpa.showSql=true
 spring.jpa.defer-datasource-initialization=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
