live reload support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,10 @@ spring.sql.init.mode=never
 
 # Pagination settings
 spring.data.web.pageable.max-page-size=20
+
+# Live reload settings
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.web.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.cache.period=0
